appId: ${MAESTRO_APP_ID || "engineering.brainwaves.sfera"}
---
- tapOn:
    text: "Open"
    optional: true
- tapOn:
    text: "Continue"
    optional: true
- tapOn:
    text: "Close"
    optional: true
- runFlow:
    when:
      visible: "Go home"
    commands:
      - back
- extendedWaitUntil:
    visible: "сфера."
    timeout: 120000
